# jpamb-group-8

./: .gitignore  CHANGELOG.md  OPCODES.md  README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yml  test.yml
debloater/: a.py  abstract_interpreter.py  debloat.py  debloat_test.json  dynamic_analyzer.py  interpreter.py  method_debloater.py  syntax_analyzer.py  validator.py
debloater/abstractions/: abstract_domain.py  sign_abstraction.py
debloater/dynamic/: dynamic_analyzer.py
debloater/static/: abstract_interpreter.py
debloater/static/abstractions/: abstract_domain.py  interval_abstraction.py  sign_abstraction.py
debloater/static/utils/: json_utils.py
debloater/syntactic/: call_graph_builder.py  combined_input_generator.py  random_input_generator.py  syntaxer_base.py  z3_input_generator.py
group/: group_abstract_interpreter.py
group/abstractions/: group_sign_abstraction.py
jpamb/: cli.py  model.py  stats.py
jpamb/jvm/: base.py  opcode.py
solutions/: abstract_interval_domain.py  debloater1.py  debloater2.py  dynamicAnalyzer2.py  dynamic_analyzer.py  interpreter.py  mini_test.json  mini_test_debloated.json  syntax_analyzer.py  syntaxer.py
solutions/syntax_analyzers/: base.py  call_graph.py  input_generator.py  z3_input_generator.py
src/main/java/jpamb/: Runtime.java
src/main/java/jpamb/cases/: Bloated.java  BloatedDebloated.java  BloatedMain.java  (+5 more)
test/: test_cli.py  test_cli_reliability.py  test_model.py  test_scoring.py
test/expected/: apriori.txt  bytecoder.txt  cheater.txt  interpreter.txt  my_analyzer.txt  syntaxer.txt
(+4 files in other folders)
